<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>io.mosip.esignet.mock</groupId>
		<artifactId>esignet-mock-parent</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	
	<artifactId>mock-esignet-integration-impl</artifactId>
	<packaging>jar</packaging>
	
	<name>mock-esignet-integration-impl</name>
	<description>Mockup of a wrapper implementation that is used to showcase the integration with e-Signet</description>
	<url>https://github.com/mosip/esignet-mock-services</url>
	
	<licenses>
		<license>
			<name>MPL 2.0</name>
			<url>https://www.mozilla.org/en-US/MPL/2.0/</url>
		</license>
	</licenses>
	<scm>
		<connection>scm:git:git://github.com/mosip/esignet-mock-services.git</connection>
		<developerConnection>scm:git:ssh://github.com:mosip/esignet-mock-services.git</developerConnection>
		<url>https://github.com/mosip/esignet-mock-services</url>
		<tag>HEAD</tag>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>
	</properties>
	<dependencies>
	
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>compile</scope>
		</dependency>
		
		<dependency>
			<groupId>io.mosip.esignet</groupId>
    		<artifactId>esignet-integration-api</artifactId>
    		<version>1.0.0-SNAPSHOT</version>
		</dependency>
		
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-keymanager-service</artifactId>
			<version>1.2.1-SNAPSHOT</version>
			<scope>provided</scope>
			<classifier>lib</classifier>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.cloud</groupId>
					<artifactId>spring-cloud-starter-sleuth</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.springframework.security</groupId>
					<artifactId>spring-security-test</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
	</dependencies>
</project>